--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Feathers Example</title>
+  <title>Log Tailer</title>
 <link rel="stylesheet" href="//unpkg.com/feathers-chat@4.0.0/public/base.css">
     <link rel="stylesheet" href="//unpkg.com/feathers-chat@4.0.0/public/chat.css">
 </head>
 <body>
   <main id="main" class="container">
-    <h1>Welcome to Feathers</h1>
-    <form class="form" onsubmit="sendMessage(event.preventDefault())">
+    <h1 style="color:blue;">Welcome to LogTailer</h1>
+    <p> LogTailer shows the last 10 lines of the configured log and realtime updates if 
+       new lines are added to the logs.</p>
+    <!-- <form class="form" onsubmit="sendMessage(event.preventDefault())">
       <input type="text" id="message-text" placeholder="Enter message here">
       <button type="submit" class="button button-primary">Send message</button>
-    </form>
+    </form> -->
 
-    <h2>Here are the current messages:</h2>
+    
+    <h2 style="color:blue;">Log Tail:</h2>
   </main>
 
   <script src="//unpkg.com/@feathersjs/client@^4.3.0/dist/feathers.js"></script>
